--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,15 +28,15 @@
               <h1>
                 Yurii Paniv
               </h1>
-              <p>I'm a PhD student in Computer Science at the Ukrainian Catholic University (UCU), advised by <a
-                  href="https://scholar.google.com/citations?user=vaOHuLQAAAAJ">Vadim Ermolayev</a> and <a
-                  href="https://scholar.google.com/citations?user=J3GqVSMAAAAJ">Igor Krashenyi</a>.
-              </p>
-              <p>
-                I'm working on developing unsupervised and semi-supervised methods to obtain high-quality machine
+              <p>I'm a PhD student in Computer Science at the Ukrainian Catholic University (UCU), working on developing
+                unsupervised and semi-supervised methods to obtain high-quality machine
                 learning models using
                 minimal data, with an aim to bring state-of-the-art performance to mid- and low-resource
                 languages across different modalities: text, speech, and vision.
+              </p>
+              <p>
+                This is hugely important for communities underrepresented in the digital world, as well as for the
+                preservation of endangered languages.
               </p>
               <p>
 
@@ -60,7 +60,8 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Research</h2>
               <p>
-                Here is a list of my research projects, exploring various data validation and optimization techniques.
+                Here is a list of my research projects, exploring how to shorten the gap between high-resource and
+                low-resource languages in natural language processing.
               </p>
             </td>
           </tr>
