--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,8 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <img style="width:100%;max-width:100%" alt="profile photo" src="images/circle_bw_crop.jpg">
+              <img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo"
+                src="images/circle_bw_crop.jpg">
             </td>
           </tr>
         </table>
