Make more interesting

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,17 +35,18 @@
                 languages across different modalities: text, speech, and vision.
               </p>
               <p>
-                This is hugely important for communities underrepresented in the digital world, as well as for the
-                preservation of endangered languages.
+                This is important for languages that don't have the same amount of data available as for English,
+                bringing them equal economic opportunities.
               </p>
               <p>
 
               </p>
               <p style="text-align:center">
                 <!-- <a target="_blank" href="https://mailhide.io/e/B8TyS"> Email</a> &nbsp;/&nbsp; -->
-                <a href="https://github.com/robinhad">GitHub</a> &nbsp;/&nbsp;
-                <a href="https://scholar.google.com/citations?user=iUMYDLkAAAAJ&hl">Google Scholar</a> &nbsp;/&nbsp;
-                <a href="https://www.linkedin.com/in/yurii-paniv-aa969b151/"> LinkedIn </a>
+                <a href="https://github.com/robinhad"><span class="svg-icon github"></span> GitHub</a> &nbsp;/&nbsp;
+                <a href="https://scholar.google.com/citations?user=iUMYDLkAAAAJ&hl">📚 Google Scholar</a> &nbsp;/&nbsp;
+                <a href="https://www.linkedin.com/in/yurii-paniv-aa969b151/"><span class="svg-icon linkedin"></span>
+                  LinkedIn </a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
@@ -59,7 +60,8 @@
           style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
-              <h2>Research</h2>
+              <h2>🪄 Research</h2>
+              <hr>
               <p>
                 Here is a list of my research projects, exploring how to shorten the gap between high-resource and
                 low-resource languages in natural language processing.
@@ -86,19 +88,19 @@
               <em>{{post.venue}}</em>, {{ post.date | date: "%Y" }}
               <br>
               {% if post.arxiv %}
-              <a href="{{post.arxiv}}">arxiv</a> /
+              <a href="{{post.arxiv}}">📖 arxiv</a> /
               {% endif %}
               {% if post.video %}
               <a href="{{post.video}}">video</a> /
               {% endif %}
               {% if post.code %}
-              <a href="{{post.code}}">code</a> /
+              <a href="{{post.code}}"><span class="svg-icon github"></span> code</a> /
               {% endif %}
               {% if post.model %}
-              <a href="{{post.model}}">model</a> /
+              <a href="{{post.model}}">🤗 model</a> /
               {% endif %}
               {% if post.demo %}
-              <a href="{{post.demo}}">demo</a> /
+              <a href="{{post.demo}}">🕹️ demo</a> /
               {% endif %}
               {% if post.poster %}
               <a href="{{post.poster}}">poster</a> /
@@ -127,7 +129,8 @@
           style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
-              <h2>Open Source Projects</h2>
+              <h2>🤗 Open Source Projects</h2>
+              <hr>
               <p> These are projects that I have contributed to or created, that led to my research work.
               </p>
             </td>
@@ -173,13 +176,13 @@
               <a href="{{post.video2}}">video #2</a> /
               {% endif %}
               {% if post.code %}
-              <a href="{{post.code}}">code</a> /
+              <a href="{{post.code}}"><span class="svg-icon github"></span> code</a> /
               {% endif %}
               {% if post.model %}
-              <a href="{{post.model}}">model</a> /
+              <a href="{{post.model}}">🤗 model</a> /
               {% endif %}
               {% if post.demo %}
-              <a href="{{post.demo}}">demo</a> /
+              <a href="{{post.demo}}">🕹️ demo</a> /
               {% endif %}
               {% if post.poster %}
               <a href="{{post.poster}}">poster</a> /
