--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,12 +31,13 @@
               <p>I'm a PhD student in Computer Science at the Ukrainian Catholic University (UCU), working on developing
                 unsupervised and semi-supervised methods to obtain high-quality machine
                 learning models using
-                minimal data, with an aim to bring state-of-the-art performance to mid- and low-resource
+                minimal data.
+                <br>My goal is to bring state-of-the-art performance to mid- and low-resource
                 languages across different modalities: text, speech, and vision.
               </p>
               <p>
                 This is important for languages that don't have the same amount of data available as for English,
-                bringing them equal economic opportunities.
+                bringing those communities equal economic opportunities.
               </p>
               <p>
 
