--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,15 @@
   <!--<link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
     type="text/css">-->
 
+  <meta property="og:title" content="{{ site.name }}">
+  <meta property="og:description" content="{{ site.description }}">
+  <meta property="og:image" content="{{ site.baseurl }}/images/circle_bw_crop.jpg">
+  <meta property="og:url" content="{{ site.baseurl }}">
+
+  <!-- Optional but recommended -->
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="{{ site.name }}">
+
 </head>
 
 <body>
