--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -232,7 +232,8 @@
         <table class="content-table">
           <tr>
             <td class="section-title-cell">
-              <h2>Industry experience</h2>
+              <h2>⚙️ Industry experience</h2>
+              <hr>
               {% assign years = "now" | date: "%Y" | minus: 2016 %}
               <p>Overall I have {{ years }}+ years of industry experience, spanning recommendation systems and data
                 analysis for retail, automatic microchip quality assurance, financial domain and serving and processing
@@ -247,7 +248,8 @@
         <table class="content-table">
           <tr>
             <td class="section-title-cell">
-              <h2>Other Projects</h2>
+              <h2>🤝 Other Projects</h2>
+              <hr>
               <p> These include coursework, side projects and unpublished research work.
               </p>
             </td>
