--- a/style.scss
+++ b/style.scss
@@ -213,6 +213,10 @@ span.highlight {
   margin-left:auto;
 }
 
+.main-table > tbody > tr > td {
+  margin: 0;
+}
+
 .main-text-style {
   padding:2.5%;
   width:60%;
