--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -343,6 +343,17 @@
       document.getElementById('progressBar').style.width = scrolled + '%';
     });
   </script>
+  
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6J2K6SSH3Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6J2K6SSH3Z');
+</script>
+
 </body>
 
 </html>
