--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -130,7 +130,7 @@
               {% endif %}
               {% if post.youtube %}
               {% if has_previous %} / {% endif %}
-              <a href="{{post.youtube}}" target="_blank">youtube</a>{% assign has_previous = true %}
+              <a href="{{post.youtube}}" target="_blank">📺 youtube</a>{% assign has_previous = true %}
               {% endif %}
               <p></p>
               {{ post.excerpt }}
@@ -343,16 +343,16 @@
       document.getElementById('progressBar').style.width = scrolled + '%';
     });
   </script>
-  
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-6J2K6SSH3Z"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-6J2K6SSH3Z');
-</script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-6J2K6SSH3Z"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-6J2K6SSH3Z');
+  </script>
 
 </body>
 
